--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,35 +1,35 @@
 .row-header{
-    margin:0px auto;
+    margin-top:0px;
     padding:0px auto;
 }
 
 body{
-background-color: rgba(88, 93, 98, 0.007);
-width: 100vw;
+background-color: rgba(228, 231, 235, 0.007);
+width: auto;
 }
 
 .row-content {
-    margin:50px auto;
-    padding: 30px 0px 50px 0px;
+    margin:0px auto;
+    padding: 30px 0px 10px 0px;
 }
 
-.footer{
-    background-color: rgb(95, 148, 216);
+    .footer{
+    background-color: rgb(190, 209, 235);
     height: 25px;
     margin: auto;
-  }
+    }
 
 
   .home{
-      min-height: 100vh;
-      min-width: 99vw;
+      min-height: auto;
+      min-width: auto;
     }
 
   .darkbg{
-      background-color: rgb(128, 119, 119);
+      background-color: rgb(235, 232, 232);
       opacity: 0.7;
-      color: white;
-      size: 4rem;
+      color: rgb(14, 14, 14);
+      size: 8rem;
   }
 
   table, th, td {
